[+] Display url shortening option before upload
[c] Scripting API changes: added Process class, new functions
[f] Fixed keyboard not working in file list

[f] ImageEditor: Fixed crop rectangle out of boundaries issue

[f] ImageEditor: Fixed marker 1px pen issue
[c] Updated icon
[c] Language files are now in UTF-8 encoding
[c] Use winssl instead of openssl


1.3.1.4318
[f] Fixed uploading video files from Explorer's context menu (custom menu entries)

1.3.1.4317
[f] Fixed uploading video files from Explorer's context menu

1.3.1.4316

[f] Fixed crash after pressing Escape when selecting screen region (old region select method choosen)
[f] Fixed crash when uploading screenshot from tray (or by hotkey) and url shortening failed
[f] Added option "Allow Alt-Tab in fullscreen image editor", set lto fase by default
[f] Fixed truncating some settings (for example, album name on server)

1.3.1.4314

[~] Fixed producing distorted images while grabbing images from video with DirectShow

version 1.3.1.4311

[+] Added Image Editor. Now you can easily edit screenshots you've made, annotate, highlight or obfuscate parts of the screenshot.
[+] Scripting API changes: added PCRE-compatible class CRegExp, CWebBrowser, function tr() for internalization.
[+] Added vk.com support
[f] Fixed crash when extracting frames from a video file with subtitles (access violation in VSFilter.dll aka DirectVobSub).
[~] Fixed incorrect icon sizes in file list when high DPI is set
[+] Added ukrainian translation (thanks to Yurii Petrashko)

New servers:
[+] Google Drive
[+] 5cm.ru

Thanks to Alex_Qwerty:
[+] embedupload.com  
[+] jheberg.net
[+] mirrorupload.net
[+] multiup.org

[~] Fixed small bugs

---------------------------------------------------------------------------------------------------------------------------------

build 4311
[+] Added Google Drive

build 4309
[f] Fixed crash when extracting frames from a video file with subtitles (access violation in VSFilter.dll aka DirectVobSub).
