@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<UpdateInfo Name="iu_core" DownloadUrl="http://dl.bintray.com/zenden/zenden-image-uploader/iu_core_1433885547.zip" TimeStamp="1433885547" Date="09.06.2015 23:32:27" UpdateUrl="http://zenden.ws/updates/update.php?package=%name%&amp;ver=%appver%&amp;os_name=OS_NAME&amp;os_ver=OS_VER&amp;cpu_f=CPU_FEATURES" CoreUpdate="1" DisplayName="Image Uploader 1.3.2-alpha.4461" Hash="6e5b54b1bfe3c9b17d484385c8f8fc17">
-  <Info>[f] Fixed keyboard not working in file list
-[f] ImageEditor: Fixed crop rectangle out of boundaries issue
-[f] ImageEditor: Fixed marker 1px pen issue
-[f] Fixed duplicate accounts in settings.xml
-[c] Localization fix: swapped Russian and English texts
-[c] Updated icon</Info>
+<UpdateInfo Name="iu_core" DownloadUrl="http://dl.bintray.com/zenden/zenden-image-uploader/iu_core_1436032193.zip" TimeStamp="1436032193" Date="04.07.2015 19:49:53" UpdateUrl="http://zenden.ws/updates/update.php?package=%name%&amp;ver=%appver%&amp;os_name=OS_NAME&amp;os_ver=OS_VER&amp;cpu_f=CPU_FEATURES" CoreUpdate="1" DisplayName="Image Uploader 1.3.2-alpha.4466" Hash="31349d4da476c6982bf9aa6af5fc1a29">
+  <Info>[c] MediaInfo: changed duration display style
+[+] Multiselection in log window
+[-] Removed old icon
+[+] Added support for "//example.com" links in re-uploader
+[f] Multiple fixes</Info>
 </UpdateInfo>
